feat: 登录页面、新增文本图案混合span

--- a/libLogin/src/main/res/xml/login_activity_login_scene.xml
+++ b/libLogin/src/main/res/xml/login_activity_login_scene.xml
@@ -29,6 +29,10 @@
             android:id="@+id/btn_login"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintTop_toTopOf="parent" />
         <Constraint
             android:id="@+id/login"
@@ -48,6 +52,26 @@
             motion:layout_constraintStart_toStartOf="@+id/btn_login"
             motion:layout_constraintTop_toTopOf="@+id/btn_login"
             android:alpha="0" />
+
+        <Constraint
+            android:id="@+id/checked_privacy"
+            android:layout_width="100dp"
+            android:layout_marginTop="30dp"
+            motion:layout_constraintTop_toTopOf="@+id/btn_login"
+            motion:layout_constraintStart_toStartOf="parent"
+            android:layout_height="100dp" />
+
+        <Constraint
+            android:id="@+id/tv_privacy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#999999"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            android:layout_marginStart="70dp"
+            motion:layout_constraintTop_toTopOf="@+id/checked_privacy"
+            motion:layout_constraintBottom_toBottomOf="@+id/checked_privacy"
+            motion:layout_constraintStart_toStartOf="@+id/checked_privacy" />
     </ConstraintSet>
 
     <ConstraintSet android:id="@+id/end">
@@ -75,6 +99,30 @@
             android:id="@+id/btn_login"
             android:layout_width="match_parent"
             android:layout_height="60dp"
+            android:layout_marginStart="40dp"
+            android:layout_marginEnd="40dp"
+            motion:layout_constraintStart_toStartOf="parent"
+            motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintTop_toTopOf="parent"/>
+
+        <Constraint
+            android:id="@+id/checked_privacy"
+            android:layout_width="100dp"
+            android:layout_marginTop="30dp"
+            motion:layout_constraintTop_toTopOf="@+id/btn_login"
+            motion:layout_constraintStart_toStartOf="parent"
+            android:layout_height="100dp" />
+
+        <Constraint
+            android:id="@+id/tv_privacy"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#999999"
+            android:textSize="12sp"
+            android:textStyle="bold"
+            android:layout_marginStart="70dp"
+            motion:layout_constraintTop_toTopOf="@+id/checked_privacy"
+            motion:layout_constraintBottom_toBottomOf="@+id/checked_privacy"
+            motion:layout_constraintStart_toStartOf="@+id/checked_privacy" />
     </ConstraintSet>
 </MotionScene>
