--- a/libHome/src/main/res/layout/home_activity_replacement_span.xml
+++ b/libHome/src/main/res/layout/home_activity_replacement_span.xml
@@ -9,7 +9,7 @@
         android:id="@+id/tv_span"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="40dp"
+        android:layout_marginHorizontal="12dp"
         android:textSize="18sp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -44,5 +44,20 @@
         app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toEndOf="@+id/btn_add_icon"
         app:layout_constraintTop_toTopOf="@+id/btn_add_icon" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_remove"
+        style="?attr/materialButtonOutlinedStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="60dp"
+        android:text="上一步"
+        android:paddingHorizontal="20dp"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.9" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
