--- a/libHome/src/main/res/layout/home_view_stub_headers.xml
+++ b/libHome/src/main/res/layout/home_view_stub_headers.xml
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:id="@+id/container"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:maxHeight="200dp"
         android:animateLayoutChanges="true"
+        android:maxHeight="200dp"
         android:minHeight="100dp"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -2634,23 +2634,133 @@
                     app:riv_border_width="1dp"
                     app:riv_oval="true" />
 
-                <com.example.uilibrary.widget.RoundImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:src="@mipmap/img1"
-                    app:riv_border_color="@color/base_252525"
-                    app:riv_border_width="1dp"
-                    app:riv_oval="true" />
 
-                <com.example.uilibrary.widget.RoundImageView
-                    android:layout_width="25dp"
-                    android:layout_height="25dp"
-                    android:src="@mipmap/img1"
-                    app:riv_border_color="@color/base_252525"
-                    app:riv_border_width="1dp"
-                    app:riv_oval="true" />
+                <androidx.appcompat.widget.LinearLayoutCompat
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content">
+
+                    <com.example.uilibrary.widget.RoundImageView
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:src="@mipmap/img1"
+                        app:riv_border_color="@color/base_252525"
+                        app:riv_border_width="1dp"
+                        app:riv_oval="true" />
+
+                    <com.example.uilibrary.widget.RoundImageView
+                        android:layout_width="25dp"
+                        android:layout_height="25dp"
+                        android:src="@mipmap/img1"
+                        app:riv_border_color="@color/base_252525"
+                        app:riv_border_width="1dp"
+                        app:riv_oval="true" />
+
+                    <androidx.appcompat.widget.LinearLayoutCompat
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content">
+
+                        <com.example.uilibrary.widget.RoundImageView
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
+                            android:src="@mipmap/img1"
+                            app:riv_border_color="@color/base_252525"
+                            app:riv_border_width="1dp"
+                            app:riv_oval="true" />
+
+                        <com.example.uilibrary.widget.RoundImageView
+                            android:layout_width="25dp"
+                            android:layout_height="25dp"
+                            android:src="@mipmap/img1"
+                            app:riv_border_color="@color/base_252525"
+                            app:riv_border_width="1dp"
+                            app:riv_oval="true" />
+
+                        <androidx.appcompat.widget.LinearLayoutCompat
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+
+                            <com.example.uilibrary.widget.RoundImageView
+                                android:layout_width="25dp"
+                                android:layout_height="25dp"
+                                android:src="@mipmap/img1"
+                                app:riv_border_color="@color/base_252525"
+                                app:riv_border_width="1dp"
+                                app:riv_oval="true" />
+
+                            <com.example.uilibrary.widget.RoundImageView
+                                android:layout_width="25dp"
+                                android:layout_height="25dp"
+                                android:src="@mipmap/img1"
+                                app:riv_border_color="@color/base_252525"
+                                app:riv_border_width="1dp"
+                                app:riv_oval="true" />
+
+                            <androidx.appcompat.widget.LinearLayoutCompat
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content">
+
+                                <com.example.uilibrary.widget.RoundImageView
+                                    android:layout_width="25dp"
+                                    android:layout_height="25dp"
+                                    android:src="@mipmap/img1"
+                                    app:riv_border_color="@color/base_252525"
+                                    app:riv_border_width="1dp"
+                                    app:riv_oval="true" />
+
+                                <com.example.uilibrary.widget.RoundImageView
+                                    android:layout_width="25dp"
+                                    android:layout_height="25dp"
+                                    android:src="@mipmap/img1"
+                                    app:riv_border_color="@color/base_252525"
+                                    app:riv_border_width="1dp"
+                                    app:riv_oval="true" />
+
+                                <androidx.appcompat.widget.LinearLayoutCompat
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content">
+
+                                    <com.example.uilibrary.widget.RoundImageView
+                                        android:layout_width="25dp"
+                                        android:layout_height="25dp"
+                                        android:src="@mipmap/img1"
+                                        app:riv_border_color="@color/base_252525"
+                                        app:riv_border_width="1dp"
+                                        app:riv_oval="true" />
+
+                                    <com.example.uilibrary.widget.RoundImageView
+                                        android:layout_width="25dp"
+                                        android:layout_height="25dp"
+                                        android:src="@mipmap/img1"
+                                        app:riv_border_color="@color/base_252525"
+                                        app:riv_border_width="1dp"
+                                        app:riv_oval="true" />
+
+                                    <androidx.appcompat.widget.LinearLayoutCompat
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content">
+
+                                        <com.example.uilibrary.widget.RoundImageView
+                                            android:layout_width="25dp"
+                                            android:layout_height="25dp"
+                                            android:src="@mipmap/img1"
+                                            app:riv_border_color="@color/base_252525"
+                                            app:riv_border_width="1dp"
+                                            app:riv_oval="true" />
+
+                                        <com.example.uilibrary.widget.RoundImageView
+                                            android:layout_width="25dp"
+                                            android:layout_height="25dp"
+                                            android:src="@mipmap/img1"
+                                            app:riv_border_color="@color/base_252525"
+                                            app:riv_border_width="1dp"
+                                            app:riv_oval="true" />
+                                    </androidx.appcompat.widget.LinearLayoutCompat>
+                                </androidx.appcompat.widget.LinearLayoutCompat>
+                            </androidx.appcompat.widget.LinearLayoutCompat>
+                        </androidx.appcompat.widget.LinearLayoutCompat>
+                    </androidx.appcompat.widget.LinearLayoutCompat>
+                </androidx.appcompat.widget.LinearLayoutCompat>
             </androidx.appcompat.widget.LinearLayoutCompat>
-
         </LinearLayout>
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
