--- a/libLogin/src/main/res/layout/login_activity_login.xml
+++ b/libLogin/src/main/res/layout/login_activity_login.xml
@@ -77,17 +77,19 @@
         android:id="@+id/motion_parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="40dp"
         app:layoutDescription="@xml/login_activity_login_scene">
 
         <com.google.android.material.button.MaterialButton
             android:id="@+id/btn_login"
             style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="match_parent"
+            android:layout_width="0dp"
             android:layout_height="60dp"
             android:clickable="false"
-            android:paddingVertical="9dp"
-            app:layout_constraintTop_toTopOf="parent" />
+            android:layout_marginHorizontal="40dp"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:paddingVertical="9dp" />
 
         <Button
             android:id="@+id/login"
@@ -113,21 +115,15 @@
             app:layout_constraintBottom_toBottomOf="@+id/btn_login"
             app:layout_constraintEnd_toEndOf="@+id/btn_login"
             app:layout_constraintTop_toTopOf="@+id/btn_login" />
-    </androidx.constraintlayout.motion.widget.MotionLayout>
 
-    <Space
-        android:layout_width="wrap_content"
-        android:layout_height="8dp" />
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginHorizontal="40dp">
-
-        <CheckBox
+        <com.airbnb.lottie.LottieAnimationView
             android:id="@+id/checked_privacy"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            app:lottie_fileName="lottle_checked.json"
+            android:layout_width="100dp"
+            android:layout_marginTop="30dp"
+            app:layout_constraintTop_toTopOf="@+id/btn_login"
+            app:layout_constraintStart_toStartOf="parent"
+            android:layout_height="100dp" />
 
         <TextView
             android:id="@+id/tv_privacy"
@@ -136,6 +132,11 @@
             android:textColor="#999999"
             android:textSize="12sp"
             android:textStyle="bold"
+            android:layout_marginStart="70dp"
+            app:layout_constraintTop_toTopOf="@+id/checked_privacy"
+            app:layout_constraintBottom_toBottomOf="@+id/checked_privacy"
+            app:layout_constraintStart_toStartOf="@+id/checked_privacy"
             tools:text="我已阅读并同意《用户协议》和《隐私政策》" />
-    </LinearLayout>
+    </androidx.constraintlayout.motion.widget.MotionLayout>
+
 </LinearLayout>
