--- a/uiLibrary/src/main/res/layout/common_top_bar_layout.xml
+++ b/uiLibrary/src/main/res/layout/common_top_bar_layout.xml
@@ -1,16 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical"
-    android:background="@color/white"
-    android:paddingTop="16dp">
+    tools:parentTag="android.widget.LinearLayout"
+    tools:orientation="vertical"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
         android:paddingHorizontal="16dp"
         android:paddingBottom="8dp">
 
@@ -40,7 +38,7 @@
     </LinearLayout>
 
     <View
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="1dp"
         android:background="#0D252525" />
-</androidx.appcompat.widget.LinearLayoutCompat>
+</merge>
