--- a/app/src/main/res/layout/bottom_item_view.xml
+++ b/app/src/main/res/layout/bottom_item_view.xml
@@ -3,7 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="45dp"
-    android:animateLayoutChanges="true"
     android:gravity="center"
     android:orientation="vertical">
 
@@ -17,6 +16,7 @@
         android:id="@+id/tv_tab"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:textColor="@color/white"
         android:textSize="11sp"
         android:visibility="gone"
         tools:text="@string/tab_home"
