--- a/app/src/main/res/layout/view_bottom_navigation_layout.xml
+++ b/app/src/main/res/layout/view_bottom_navigation_layout.xml
@@ -2,6 +2,9 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    android:background="@drawable/bottom_tab_bg"
+    android:layout_marginHorizontal="20dp"
+    android:layout_marginBottom="16dp"
     android:paddingVertical="4dp">
 
     <com.example.demoapplication.widget.BottomItemView
