--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -2,6 +2,7 @@
 <resources>
     <style name="Theme.DemoApplication" parent="Theme.Material3.DayNight.NoActionBar" >
         <item name="android:statusBarColor">@color/grey_900</item>
+        <item name="colorPrimary">@color/black</item>
     </style>
     <color name="tab_unselect">@color/grey_50</color>
 
