--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -4,6 +4,7 @@
     <style name="Theme.DemoApplication" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:statusBarColor">@color/grey_50</item>
         <item name="android:windowLightStatusBar">true</item>
+        <item name="colorPrimary">@color/black</item>
     </style>
 
     <color name="tab_unselect">@color/grey_900</color>
