--- a/uiLibrary/src/main/res/layout/base_custom_refresh.xml
+++ b/uiLibrary/src/main/res/layout/base_custom_refresh.xml
@@ -2,7 +2,6 @@
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:background="@color/white"
     android:layout_height="wrap_content"
     android:gravity="center">
 
@@ -10,6 +9,7 @@
         android:id="@+id/lottie_refresh"
         android:layout_width="match_parent"
         android:layout_height="80dp"
+        android:layout_marginTop="20dp"
         app:lottie_autoPlay="true"
         app:lottie_fileName="lottie/lottie_refresh2.json"
         app:lottie_loop="true" />
