--- a/uiLibrary/src/main/res/layout/ui_lottie_yulan.xml
+++ b/uiLibrary/src/main/res/layout/ui_lottie_yulan.xml
@@ -2,23 +2,15 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="match_parent">
 
     <com.airbnb.lottie.LottieAnimationView
-        android:id="@+id/lottie_view"
-        android:layout_width="match_parent"
-        android:layout_height="220dp"
-        android:scaleType="centerCrop"
-        android:visibility="invisible"
+        android:layout_width="wrap_content"
+        android:layout_height="100dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:lottie_fileName="anim_6.json" />
-
-    <View
-        android:layout_width="match_parent"
-        android:layout_height="20dp"
-        android:background="@drawable/r15_top_ffffff"
-        app:layout_constraintBottom_toBottomOf="parent" />
+        app:lottie_autoPlay="true"
+        app:lottie_fileName="anim_3.json" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
