--- a/libHome/src/main/res/layout/home_fragment_title.xml
+++ b/libHome/src/main/res/layout/home_fragment_title.xml
@@ -7,8 +7,9 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:gravity="center_horizontal"
-        android:lineSpacingExtra="4dp"
-        android:text="哈哈哈哈哈哈哈哈\n哈哈哈哈哈哈哈哈哈哈\n哈哈哈哈哈哈哈哈哈哈\n哈哈哈哈哈哈哈哈哈哈\n哈哈哈哈哈哈哈哈哈哈\n哈哈哈哈哈哈哈哈哈哈\n哈哈哈哈哈哈哈哈哈哈\n哈哈哈哈哈哈哈哈哈哈\n哈哈哈哈哈哈哈哈哈哈\n哈哈哈哈哈哈哈哈哈哈\n哈哈哈哈哈哈哈哈哈哈\n哈哈哈哈哈哈哈哈哈哈\n哈哈哈哈哈哈哈哈哈哈\n哈哈哈哈哈哈哈哈哈哈\n哈哈哈哈哈哈哈哈哈哈\n哈哈哈哈哈哈哈哈哈哈\n哈哈哈哈哈哈哈哈哈哈\n哈哈哈哈哈哈哈哈哈哈\n哈哈哈哈哈哈哈哈哈哈\n哈哈哈哈哈哈哈哈哈哈"
-        android:textSize="22sp" />
+        android:lineSpacingMultiplier="1.2"
+        android:padding="16dp"
+        android:text="@string/home_cat_topappbar_lorem_ipsum"
+        android:textSize="16sp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
