--- a/uiLibrary/src/main/res/layout/common_top_bar_layout.xml
+++ b/uiLibrary/src/main/res/layout/common_top_bar_layout.xml
@@ -6,9 +6,10 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <LinearLayout
+        android:id="@+id/parent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
+        android:paddingTop="16dp"
         android:paddingHorizontal="16dp"
         android:paddingBottom="8dp">
 
