--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,14 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
+
+    <color name="tab_unselect">@color/grey_50</color>
+
     <style name="Theme.DemoApplication" parent="Theme.Material3.DayNight.NoActionBar" >
         <item name="android:statusBarColor">@color/grey_900</item>
         <item name="colorPrimary">@color/black</item>
     </style>
-    <color name="tab_unselect">@color/grey_50</color>
 
-    <style name="Theme.SplashActivity" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="android:windowFullscreen">true</item>
-        <item name="android:windowTranslucentStatus">true</item>
-        <item name="android:windowBackground">@drawable/splash</item>
+    <style name="NightAdjusted.Theme.Nia" parent="Theme.Material3.DayNight.NoActionBar" />
+
+    <style name="NightAdjusted.Theme.Splash" parent="Theme.SplashScreen">
+        <item name="android:windowLightStatusBar" >false</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="27">false</item>
     </style>
 </resources>
