--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
 
     <style name="Theme.DemoApplication" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="android:statusBarColor">@color/grey_50</item>
@@ -7,11 +7,22 @@
         <item name="colorPrimary">@color/black</item>
     </style>
 
+    <style name="NightAdjusted.Theme.Nia" parent="Theme.Material3.DayNight.NoActionBar" />
+
+    <!-- The final theme we use -->
+    <style name="Theme.Nia" parent="NightAdjusted.Theme.Nia" />
+
+    <style name="NightAdjusted.Theme.Splash" parent="Theme.SplashScreen">
+        <item name="android:windowLightStatusBar">true</item>
+        <item name="android:windowLightNavigationBar" tools:targetApi="27">true</item>
+    </style>
+
+    <style name="Theme.Splash" parent="NightAdjusted.Theme.Splash">
+        <item name="windowSplashScreenAnimatedIcon">@drawable/ic_splash</item>
+        <item name="postSplashScreenTheme">@style/Theme.Nia</item>
+    </style>
+
+
     <color name="tab_unselect">@color/grey_900</color>
 
-    <style name="Theme.SplashActivity" parent="Theme.Material3.DayNight.NoActionBar">
-        <item name="android:windowFullscreen">true</item>
-        <item name="android:windowTranslucentStatus">true</item>
-        <item name="android:windowBackground">@drawable/splash</item>
-    </style>
 </resources>
