--- a/libSquare/src/main/res/layout/square_fragment_square.xml
+++ b/libSquare/src/main/res/layout/square_fragment_square.xml
@@ -7,8 +7,8 @@
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:animateLayoutChanges="true"
         android:layout_marginHorizontal="20dp"
+        android:animateLayoutChanges="true"
         android:gravity="center_horizontal"
         android:orientation="vertical">
 
@@ -32,58 +32,51 @@
             android:layout_width="match_parent"
             android:layout_height="12dp" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="?attr/textInputOutlinedStyle"
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/et_money"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginHorizontal="40dp"
-            android:hint="你工资多少，悄悄告诉我">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_money"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberPassword"
-                android:textSize="16sp" />
-        </com.google.android.material.textfield.TextInputLayout>
+            android:background="@drawable/square_et_text_bg"
+            android:gravity="center_vertical"
+            android:hint="你工资多少，悄悄告诉我"
+            android:inputType="numberPassword"
+            android:paddingStart="10dp"
+            android:textSize="16sp" />
 
         <Space
             android:layout_width="match_parent"
             android:layout_height="16dp" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="?attr/textInputOutlinedStyle"
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/et_start_time"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginHorizontal="40dp"
-            android:hint="几点上班？">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_start_time"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                android:textSize="16sp" />
-        </com.google.android.material.textfield.TextInputLayout>
+            android:background="@drawable/square_et_text_bg"
+            android:focusable="false"
+            android:gravity="center_vertical"
+            android:hint="几点上班？"
+            android:inputType="numberDecimal"
+            android:paddingStart="10dp"
+            android:textSize="16sp" />
 
         <Space
             android:layout_width="match_parent"
             android:layout_height="16dp" />
 
-        <com.google.android.material.textfield.TextInputLayout
-            style="?attr/textInputOutlinedStyle"
+        <androidx.appcompat.widget.AppCompatEditText
+            android:id="@+id/et_end_time"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="50dp"
             android:layout_marginHorizontal="40dp"
-            android:hint="几点下班？">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_end_time"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                android:textSize="16sp" />
-        </com.google.android.material.textfield.TextInputLayout>
+            android:background="@drawable/square_et_text_bg"
+            android:focusable="false"
+            android:gravity="center_vertical"
+            android:hint="几点下班？"
+            android:inputType="numberDecimal"
+            android:paddingStart="10dp"
+            android:textSize="16sp" />
 
         <Space
             android:layout_width="match_parent"
@@ -114,8 +107,8 @@
             style="?attr/textInputOutlinedStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
             android:layout_marginHorizontal="40dp"
+            android:layout_marginTop="16dp"
             android:hint="午休多久？"
             android:visibility="gone">
 
