--- a/uiLibrary/src/main/res/layout/ui_lottie_yulan.xml
+++ b/uiLibrary/src/main/res/layout/ui_lottie_yulan.xml
@@ -5,12 +5,9 @@
     android:layout_height="match_parent">
 
     <com.airbnb.lottie.LottieAnimationView
-        android:layout_width="wrap_content"
-        android:layout_height="100dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         app:lottie_autoPlay="true"
-        app:lottie_fileName="anim_3.json" />
+        app:lottie_fileName="lottie_empty.json" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
