--- a/libSquare/src/main/res/layout/square_fragment_square.xml
+++ b/libSquare/src/main/res/layout/square_fragment_square.xml
@@ -1,169 +1,89 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:gravity="center_horizontal"
+    android:orientation="vertical">
 
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginHorizontal="20dp"
-        android:animateLayoutChanges="true"
-        android:gravity="center_horizontal"
-        android:orientation="vertical">
-
-        <com.airbnb.lottie.LottieAnimationView
-            android:layout_width="match_parent"
-            android:layout_height="180dp"
-            app:lottie_autoPlay="true"
-            app:lottie_fileName="anim_5.json"
-            app:lottie_loop="true" />
+        android:layout_marginHorizontal="40dp"
+        android:gravity="center_vertical">
 
         <TextView
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="是否午休？"
+            android:textSize="16sp" />
+
+        <com.example.uilibrary.widget.SwitchView
+            android:id="@+id/switch_view"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="20dp"
-            android:text="上班信息登记"
-            android:textColor="#252525"
-            android:textSize="24sp"
-            android:textStyle="bold" />
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="12dp" />
-
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/et_money"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginHorizontal="40dp"
-            android:background="@drawable/square_et_text_bg"
-            android:gravity="center_vertical"
-            android:hint="你工资多少，悄悄告诉我"
-            android:inputType="numberPassword"
-            android:paddingStart="10dp"
-            android:textSize="16sp" />
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="16dp" />
-
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/et_start_time"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginHorizontal="40dp"
-            android:background="@drawable/square_et_text_bg"
-            android:focusable="false"
-            android:gravity="center_vertical"
-            android:hint="几点上班？"
-            android:inputType="numberDecimal"
-            android:paddingStart="10dp"
-            android:textSize="16sp" />
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="16dp" />
-
-        <androidx.appcompat.widget.AppCompatEditText
-            android:id="@+id/et_end_time"
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:layout_marginHorizontal="40dp"
-            android:background="@drawable/square_et_text_bg"
-            android:focusable="false"
-            android:gravity="center_vertical"
-            android:hint="几点下班？"
-            android:inputType="numberDecimal"
-            android:paddingStart="10dp"
-            android:textSize="16sp" />
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="16dp" />
-
-        <androidx.appcompat.widget.LinearLayoutCompat
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="40dp"
-            android:gravity="center_vertical">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:text="是否午休？"
-                android:textSize="16sp" />
-
-            <com.example.uilibrary.widget.SwitchView
-                android:id="@+id/switch_view"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content" />
-
-        </androidx.appcompat.widget.LinearLayoutCompat>
-
-        <com.google.android.material.textfield.TextInputLayout
-            android:id="@+id/xiu"
-            style="?attr/textInputOutlinedStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="40dp"
-            android:layout_marginTop="16dp"
-            android:hint="午休多久？"
-            android:visibility="gone">
-
-            <com.google.android.material.textfield.TextInputEditText
-                android:id="@+id/et_release_time"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:inputType="numberDecimal"
-                android:textSize="16sp" />
-        </com.google.android.material.textfield.TextInputLayout>
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="16dp" />
-
-        <RadioGroup
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginHorizontal="40dp"
-            android:checkedButton="@id/check_one">
-
-            <com.google.android.material.radiobutton.MaterialRadioButton
-                android:id="@+id/check_one"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="单休" />
-
-            <com.google.android.material.radiobutton.MaterialRadioButton
-                android:id="@+id/check_two"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="双休" />
-
-            <com.google.android.material.radiobutton.MaterialRadioButton
-                android:id="@+id/check_three"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="大小周" />
-        </RadioGroup>
-
-        <Space
-            android:layout_width="match_parent"
-            android:layout_height="16dp" />
-
-        <com.google.android.material.button.MaterialButton
-            android:id="@+id/btn_job"
-            style="?attr/materialButtonOutlinedStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:paddingVertical="9dp"
-            android:text="开始搬砖🧱"
-            android:textColor="#333333"
-            android:textSize="16sp"
-            android:textStyle="bold" />
+            android:layout_height="wrap_content" />
 
     </androidx.appcompat.widget.LinearLayoutCompat>
 
-</androidx.core.widget.NestedScrollView>
+    <com.google.android.material.textfield.TextInputLayout
+        android:id="@+id/xiu"
+        style="?attr/textInputOutlinedStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="40dp"
+        android:layout_marginTop="16dp"
+        android:hint="午休多久？"
+        android:visibility="gone">
+
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_release_time"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="numberDecimal"
+            android:textSize="16sp" />
+    </com.google.android.material.textfield.TextInputLayout>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="16dp" />
+
+    <RadioGroup
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="40dp"
+        android:checkedButton="@id/check_one">
+
+        <com.google.android.material.radiobutton.MaterialRadioButton
+            android:id="@+id/check_one"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="单休" />
+
+        <com.google.android.material.radiobutton.MaterialRadioButton
+            android:id="@+id/check_two"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="双休" />
+
+        <com.google.android.material.radiobutton.MaterialRadioButton
+            android:id="@+id/check_three"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="大小周" />
+    </RadioGroup>
+
+    <Space
+        android:layout_width="match_parent"
+        android:layout_height="16dp" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/btn_job"
+        style="?attr/materialButtonOutlinedStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingVertical="9dp"
+        android:text="开始搬砖🧱"
+        android:textColor="#333333"
+        android:textSize="16sp"
+        android:textStyle="bold" />
+</LinearLayout>
