--- a/app/src/main/res/layout/bottom_item_view.xml
+++ b/app/src/main/res/layout/bottom_item_view.xml
@@ -1,11 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="45dp"
-    android:gravity="center"
-    android:animateLayoutChanges="true"
-    android:orientation="vertical">
+    tools:orientation="vertical"
+    tools:parentTag="android.widget.LinearLayout">
 
     <ImageView
         android:id="@+id/iv_tab"
@@ -22,5 +19,4 @@
         android:visibility="gone"
         tools:text="@string/tab_home"
         tools:visibility="visible" />
-
-</LinearLayout>
+</merge>
