feat:网易歌单管理添加动画完成

--- a/lib_news/src/main/res/layout/news_rv_item_song_title.xml
+++ b/lib_news/src/main/res/layout/news_rv_item_song_title.xml
@@ -12,7 +12,7 @@
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="21dp"
         tools:text="标题" />
 
     <Space
