--- a/lib_news/src/main/res/layout/news_activity_wx_manager.xml
+++ b/lib_news/src/main/res/layout/news_activity_wx_manager.xml
@@ -4,6 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:clipToPadding="false"
+    android:elevation="3dp"
     android:clipChildren="false"
     android:background="@color/white"
     android:orientation="vertical">
