--- a/lib_news/src/main/res/layout/news_rv_item_song.xml
+++ b/lib_news/src/main/res/layout/news_rv_item_song.xml
@@ -2,18 +2,19 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="4dp"
-    android:layout_marginVertical="4dp"
+    android:paddingHorizontal="4dp"
+    android:paddingVertical="4dp"
     android:clipChildren="false"
     android:clipToPadding="false">
 
     <LinearLayout
         android:id="@+id/parent"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/news_item_song_bg"
+        android:gravity="center"
         android:paddingHorizontal="8dp"
         android:paddingVertical="4dp"
         app:layout_constraintStart_toStartOf="parent"
@@ -29,6 +30,7 @@
             android:id="@+id/tv_song"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxLines="1"
             android:paddingHorizontal="4dp"
             android:paddingVertical="2dp"
             android:textColor="@color/white"
@@ -37,9 +39,10 @@
 
     <LinearLayout
         android:id="@+id/anim_layout"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/news_item_song_bg"
+        android:gravity="center"
         android:paddingHorizontal="8dp"
         android:paddingVertical="4dp"
         android:visibility="gone"
@@ -55,6 +58,7 @@
             android:id="@+id/tv_song2"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:maxLines="1"
             android:paddingHorizontal="4dp"
             android:paddingVertical="2dp"
             android:textColor="@color/white"
