--- a/lib_news/src/main/res/layout/news_huya_screen_activity.xml
+++ b/lib_news/src/main/res/layout/news_huya_screen_activity.xml
@@ -1,6 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <com.example.lib_news.widget.ScreenRecycleView
+        android:id="@+id/rv_screen"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintHeight_percent="0.4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintWidth_percent="0.7"
+        tools:listitem="@layout/news_rv_item_screen" />
+
+    <TextView
+        android:id="@+id/tv_un_read"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/bg_r99_black"
+        android:paddingHorizontal="8dp"
+        android:paddingVertical="2dp"
+        android:textColor="@color/white"
+        android:textSize="11sp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="@+id/rv_screen"
+        app:layout_constraintEnd_toEndOf="@id/rv_screen"
+        app:layout_constraintStart_toStartOf="@id/rv_screen"
+        tools:text="未读: 1" />
 </androidx.constraintlayout.widget.ConstraintLayout>
