--- a/libHome/src/main/res/layout/home_activity_arouter_test.xml
+++ b/libHome/src/main/res/layout/home_activity_arouter_test.xml
@@ -200,6 +200,49 @@
                     android:layout_height="16dp" />
             </androidx.appcompat.widget.LinearLayoutCompat>
 
+            <Space
+                android:layout_width="wrap_content"
+                android:layout_height="16dp" />
+
+            <androidx.appcompat.widget.LinearLayoutCompat
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:background="@drawable/ui_bg_252525_border_1dp_r8"
+                android:gravity="center_horizontal"
+                android:orientation="vertical">
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="8dp" />
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:gravity="center"
+                    android:text="使用协程实现弹窗依次展示"
+                    android:textSize="16sp"
+                    android:textStyle="bold" />
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="8dp" />
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="8dp" />
+
+                <Button
+                    android:id="@+id/btn_action_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="弹窗展示" />
+
+                <Space
+                    android:layout_width="wrap_content"
+                    android:layout_height="16dp" />
+            </androidx.appcompat.widget.LinearLayoutCompat>
+
             <FrameLayout
                 android:id="@+id/fragment"
                 android:layout_width="match_parent"
