--- a/libHome/src/main/res/layout/home_rv_item_fold_text.xml
+++ b/libHome/src/main/res/layout/home_rv_item_fold_text.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginVertical="4dp"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:layout_marginVertical="4dp">
 
     <com.example.uilibrary.widget.FoldTextView
         android:id="@+id/tv_content"
