--- a/libHome/src/main/res/layout/home_rv_item_banner.xml
+++ b/libHome/src/main/res/layout/home_rv_item_banner.xml
@@ -5,7 +5,8 @@
     android:id="@+id/parent"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_marginHorizontal="16dp"
+    android:layout_marginStart="16dp"
+    android:layout_marginEnd="46dp"
     android:layout_marginVertical="8dp"
     app:cardCornerRadius="10dp">
 
@@ -13,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <com.example.uilibrary.widget.RoundImageView
+        <com.example.uilibrary.widget.roundViews.RoundImageView
             android:id="@+id/iv_banner"
             android:layout_width="match_parent"
             android:layout_height="0dp"
