--- a/lib_news/src/main/res/layout/news_rv_item_other_header_view.xml
+++ b/lib_news/src/main/res/layout/news_rv_item_other_header_view.xml
@@ -4,7 +4,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content">
 
-    <com.example.uilibrary.widget.RoundImageView
+    <com.example.uilibrary.widget.roundViews.RoundImageView
         android:layout_width="38dp"
         android:layout_height="38dp"
         android:src="@mipmap/img1"
