--- a/libHome/src/main/res/layout/home_activity_demo.xml
+++ b/libHome/src/main/res/layout/home_activity_demo.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <fragment xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/fragment"
-    android:name="com.example.libHome.ui.GroupFragment"
+    android:name="com.example.libHome.ui.WaveFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
