--- a/lib_news/src/main/res/layout/news_test.xml
+++ b/lib_news/src/main/res/layout/news_test.xml
@@ -6,13 +6,10 @@
     android:layout_height="wrap_content">
 
     <com.example.lib_news.widget.CustomShapeView
-        android:layout_width="wrap_content"
-        android:layout_height="25dp"
-        android:layout_marginTop="20dp"
-        android:text=""
-        android:paddingStart="74dp"
-        android:paddingEnd="12dp"
-        android:gravity="center_vertical"
+        android:layout_width="93dp"
+        android:layout_height="88dp"
+        android:src="@mipmap/img1"
+        android:scaleType="fitXY"
         android:layout_marginHorizontal="40dp"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
